<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general">

        <Preference
            android:key="currencies"
            android:title="@string/currencies" />

        <Preference
            android:key="categories"
            android:title="@string/categories" />

        <ListPreference
            android:key="period"
            android:title="@string/period"
            android:entries="@array/periods"
            android:entryValues="@array/periods_values"
            android:defaultValue="3" />

        <ListPreference
            android:key="update_exchange_rates"
            android:title="@string/update_exchange_rates"
            android:entries="@array/automatic_updates"
            android:entryValues="@array/automatic_updates_values"
            android:defaultValue="0" />

        <SwitchPreference
            android:key="focus_categories_search"
            android:title="@string/search_categories"
            android:summaryOn="@string/l_auto_search_categories_on"
            android:summaryOff="@string/l_auto_search_categories_off" />
    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/lists">
        <Preference
            android:key="tags"
            android:title="@string/tags" />
        <Preference
            android:key="recurring_transactions"
            android:title="@string/recurring_transactions" />
        <Preference
            android:key="transaction_templates"
            android:title="@string/transaction_templates" />
        <Preference
            android:key="places"
            android:title="@string/places" />
        <Preference
            android:key="people"
            android:title="@string/people" />
    </PreferenceCategory> -->

    <PreferenceCategory android:title="@string/security">
        <PreferenceScreen
            android:key="app_lock"
            android:title="@string/app_lock">
            <Preference
                android:key="app_lock_none"
                android:title="@string/none" />
            <Preference
                android:key="app_lock_pattern"
                android:title="@string/pattern" />
        </PreferenceScreen>

        <Preference
            android:key="your_data"
            android:title="@string/your_data" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="donate"
            android:title="@string/donate" />
        <Preference
            android:key="rate_app"
            android:title="@string/rate_app" />
        <Preference
            android:key="change_log"
            android:title="@string/change_log" />
    </PreferenceCategory>
</PreferenceScreen>