<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space_large"
        android:paddingBottom="@dimen/space_large"
        android:paddingLeft="@dimen/margin_dynamic_large"
        android:paddingRight="@dimen/margin_dynamic_large"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/title_ET"
            style="@style/EditText.Field"
            android:layout_gravity="bottom"
            android:hint="@string/title"
            android:inputType="textCapWords" />

        <Button
            android:id="@+id/amount_B"
            style="@style/Button.Select"
            android:layout_marginTop="@dimen/space_normal"
            android:hint="@string/amount" />

        <Button
            android:id="@+id/categories_B"
            style="@style/Button.Select"
            android:layout_marginTop="@dimen/space_normal"
            android:hint="@string/categories" />

        <CheckBox
            android:id="@+id/includeInTotalBudget_CB"
            style="@style/CheckBox"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/include_in_total_budget" />

        <CheckBox
            android:id="@+id/showInOverview_CB"
            style="@style/CheckBox"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/show_in_overview" />

        <EditText
            android:id="@+id/note_ET"
            style="@style/EditText.Field"
            android:layout_marginTop="@dimen/space_large"
            android:hint="@string/note"
            android:inputType="textCapSentences|textMultiLine" />

    </LinearLayout>

</ScrollView>