<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/TextView"
        android:layout_marginBottom="@dimen/space_normal"
        android:text="@string/accounts"
        android:textAllCaps="true"
        android:textColor="@color/text_accent" />

    <LinearLayout
        android:id="@+id/container_V"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <View
        android:id="@+id/separator_V"
        style="@style/Separator.Thin"
        android:layout_marginTop="@dimen/space_normal"
        android:layout_marginBottom="@dimen/space_normal" />

    <LinearLayout
        android:id="@+id/balanceContainer_V"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView.Secondary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/balance" />

        <TextView
            android:id="@+id/balance_TV"
            android:textStyle="bold"
            style="@style/TextView.Secondary" />
    </LinearLayout>

    <TextView
        android:id="@+id/createAccount_TV"
        style="@style/TextView"
        android:drawableLeft="@drawable/ic_action_new"
        android:drawablePadding="@dimen/space_normal"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_large"
        android:text="@string/create_account" />

</merge>